src/objects/Loan_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Interest_Due__c</fullName>
        <formula>IF(OR(ISPICKVAL(Bill_Status__c, &quot;Current&quot;), ISPICKVAL(Bill_Status__c, &quot;Closed&quot;)),
   IF (Loan_Balance__c &lt;= 0, 
       0, 
       Loan_Balance__c * Interest_Rate__c / 12),
   null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Loan Balance * Monthly Rate from related Product on Loan</inlineHelpText>
        <label>Actual Interest Due</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Loan_Balance_After_Payment__c</fullName>
        <formula>Loan_Balance__c -  Principal_Applied__c +  Actual_Principal_Paydown__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Loan Balance Before Payment - Principal Applied + Principal Paydown Amount (since that is applied to the Loan Balance before payment)</inlineHelpText>
        <label>Actual Loan Balance After Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_PI_Due__c</fullName>
        <inlineHelpText>Actual Principal + Interest Due, set by apex, taking principal payments during IO period into account</inlineHelpText>
        <label>Actual Principal + Interest Due</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Principal_Due__c</fullName>
        <formula>IF(OR(ISPICKVAL(Bill_Status__c, &quot;Current&quot;), ISPICKVAL(Bill_Status__c, &quot;Closed&quot;)), 
   IF(Interest_Only_Period__c,0,Actual_PI_Due__c - Actual_Interest_Due__c),
   null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Principal Due</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Principal_Interest_Due__c</fullName>
        <formula>IF(Interest_Only_Period__c, Actual_Interest_Due__c,
   MIN(Loan_Balance__c+Actual_Interest_Due__c,Amort_Total_Due__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Principal + Interest Due</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Principal_Paydown__c</fullName>
        <inlineHelpText>Principal paydown amount which trigger reamortization</inlineHelpText>
        <label>Actual Principal Paydown</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Interest_Rate__c</fullName>
        <inlineHelpText>Set by LoanServicer when creating the amortization schedule if the rate is scheduled to adjust</inlineHelpText>
        <label>Adjusted Interest Rate</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Amort_Cumulative_Principal__c</fullName>
        <inlineHelpText>Cumulative principal as calculated by the original amortization schedule and does not reflect actual payments</inlineHelpText>
        <label>Amort Cumulative Principal</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amort_Interest_Due__c</fullName>
        <label>Amort Interest Due</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amort_Principal_Due__c</fullName>
        <label>Amort Principal Due</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amort_Starting_Principal__c</fullName>
        <inlineHelpText>Starting principal for this period as calculated by the original amortization schedule.</inlineHelpText>
        <label>Amort Starting Principal</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amort_Total_Due__c</fullName>
        <formula>Amort_Interest_Due__c + Amort_Principal_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amort Total Due</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avidia_Checking_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avidia Checking Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Status__c</fullName>
        <label>Bill Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Future</fullName>
                    <default>true</default>
                    <label>Future</label>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_Code__c</fullName>
        <inlineHelpText>Cash Code as defined by Lease Dimensions. 
125 = cash payment (money was actually sent to lockbox and applied to account)
130 = non-cash payment (no physical transfer of money, a request from BW goes to LD to lower the principal, ex. IBLS reductions)</inlineHelpText>
        <label>Cash Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>125</fullName>
                </value>
                <value>
                    <fullName>130</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <inlineHelpText>Check Number or payment identifier (if paid via ACH)</inlineHelpText>
        <label>Check Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cumulative_Principal_During_IO__c</fullName>
        <inlineHelpText>Principal paid during the Interest Only period is used to reamortize the P&amp;I period</inlineHelpText>
        <label>Cumulative Principal During IO</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Principal_Payments__c</fullName>
        <inlineHelpText>Sum of all previous principal payments, set by Apex.</inlineHelpText>
        <label>Actual Cumulative Principal Payments</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Month_Year__c</fullName>
        <formula>MONTH(Payment_1__c)+YEAR(Payment_1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Month/Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_late__c</fullName>
        <formula>Payment_1__c -  Payment_Due_Date2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days late</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Cumulative_Principal__c</fullName>
        <inlineHelpText>Sum of forecasted principal payments up to, but not including, this Loan Payment.</inlineHelpText>
        <label>Forecasted Cumulative Principal</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Interest_Due__c</fullName>
        <description>IF(Loan_Balance__c&lt;=0,0, Forecasted_Loan_Balance__c * Loan__r.Product__r.Loan_Interest_Rate__c /12)</description>
        <label>Forecasted Interest Due</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Loan_Balance__c</fullName>
        <description>MAX(Funds_Distributed__c - Cumulative_Principal_Payments__c - Forecasted_Cumulative_Principal__c ,0)</description>
        <label>Forecasted Loan Balance</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Principal_Due__c</fullName>
        <description>IF(Loan_Balance__c &lt;= 0, 0, 
IF(Interest_Only_Period__c, 0, 
Forecasted_Principal_Interest_Due__c - Forecasted_Interest_Due__c))</description>
        <label>Forecasted Principal Due</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Principal_Interest_Due__c</fullName>
        <inlineHelpText>IF(Interest_Only_Period__c, Forecasted_Interest_Due__c, 
MIN(Forecasted_Loan_Balance__c + Forecasted_Loan_Balance__c * Loan__r.Product__r.Loan_Interest_Rate__c / 12, 
Amort_Total_Due__c))</inlineHelpText>
        <label>Forecasted Principal + Interest Due</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funds_Distributed__c</fullName>
        <description>(LoanAmount*FirstDistribution+Fees)*PayFirstDistribution + LoanAmount*SecondDistribution*PaySecondDistribution</description>
        <inlineHelpText>The total principle distributed for this payment period. Could be less than the full principle if the period is in an Interest Only period. Calculated by backend trigger</inlineHelpText>
        <label>Funds Distributed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IBLS_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be checked if a loan payment record represents an application of IBLS funds to principal.</description>
        <inlineHelpText>Please check this box if a payment is an IBLS payment. Please only include the IBLS amount in any loan payment record that has this box checked. If necessary create an additional loan payment record for any additional payment(s).</inlineHelpText>
        <label>IBLS Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Applied__c</fullName>
        <inlineHelpText>Sum of Transaction Application Interest Applied</inlineHelpText>
        <label>Actual Interest Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Due__c</fullName>
        <inlineHelpText>Set by apex upon Loan creation</inlineHelpText>
        <label>Interest Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Only_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Only Period?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Payment__c</fullName>
        <label>Interest Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <formula>BLANKVALUE(Adjusted_Interest_Rate__c, Loan__r.Product__r.Loan_Interest_Rate__c)</formula>
        <inlineHelpText>Shows the Product&apos;s interest rate, or an adjusted rate for variable products</inlineHelpText>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Late_Category__c</fullName>
        <formula>IF(

Days_late__c  &lt;= 0, &quot;On Time&quot;,

IF(

Days_late__c &lt;= 30, &quot;0-30 days&quot;,

IF(

(Days_late__c &gt; 30 &amp;&amp; Days_late__c &lt;= 60), &quot;30-60 days&quot;,


IF(

(Days_late__c &gt; 60 &amp;&amp; Days_late__c &lt;= 90), &quot;60-90 days&quot;,

IF(

(Days_late__c &gt; 90 &amp;&amp; Days_late__c &lt;= 120), &quot;90-120 days&quot;,

&quot;over 120 days&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Balance__c</fullName>
        <formula>MAX(  Funds_Distributed__c - Cumulative_Principal_Payments__c -  Actual_Principal_Paydown__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Funds Distributed - Cumulative Principal Payments - Principal Paydown for this period</inlineHelpText>
        <label>Actual Loan Balance Before Payment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Loan Payments</relationshipLabel>
        <relationshipName>Loan_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loan_name__c</fullName>
        <formula>Loan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(MONTH(  Payment_Due_Date2__c  ), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_days_late__c</fullName>
        <formula>Days_late__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XXXNumber of days late</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Loan__r.Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Loan__r.Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_1__c</fullName>
        <label>Date of Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date2__c</fullName>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date_formula__c</fullName>
        <formula>if ( ISBLANK( Payment_Due_Date2__c ) ,
     DATE(YEAR(TODAY())+FLOOR((MONTH(TODAY())+Period__c)/12),
          CASE(MOD(MONTH(TODAY())+1+MOD(Period__c,12),12),0,12,
               MOD(MONTH(TODAY())+1+MOD(Period__c,12),12)),
          1),
     Payment_Due_Date2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimates Payment Due Date if blank (assuming the first payment due date is two months from today)</inlineHelpText>
        <label>Payment Due Date (actual and estimated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Number2__c</fullName>
        <label>Payment Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <inlineHelpText>Index of Loan Payment for this loan, starting at 0 (representing the first payment) and going to Loan Term + Interest Only Period - 1.</inlineHelpText>
        <label>Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principal_Applied__c</fullName>
        <inlineHelpText>Sum of Transaction Application Principal Applied</inlineHelpText>
        <label>Actual Principal Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Due__c</fullName>
        <inlineHelpText>Set by apex upon Loan creation</inlineHelpText>
        <label>Principal Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Payment__c</fullName>
        <label>Principal Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Period_Loan_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to the prior Loan Payment, used to update Cumulative fields</inlineHelpText>
        <label>Prior Period Loan Payment</label>
        <referenceTo>Loan_Payment__c</referenceTo>
        <relationshipLabel>Next Loan Payments</relationshipLabel>
        <relationshipName>Loan_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Interest_Balance__c</fullName>
        <label>Remaining Interest Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Principal_Balance__c</fullName>
        <label>Remaining Principal Balance</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Starting_Interest_Balance__c</fullName>
        <label>Starting Interest Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Starting_Principal_Balance__c</fullName>
        <label>Starting Principal Balance</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uncategorized_payment__c</fullName>
        <description>For payments made by customers that were not categorized a principal, interest, payoff early, or late fee payment</description>
        <label>Uncategorized payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>45</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Update_Dummy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Dummy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year2__c</fullName>
        <formula>Text(year( Payment_Due_Date2__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year (Inactive)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loan Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Payment_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Period__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LP-{000000}</displayFormat>
        <label>Loan Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>